--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"docxtemplater": "^3.54.0",
+		"flowbite-svelte-icons": "^2.0.2",
 		"fs": "0.0.1-security",
 		"path": "^0.12.7",
 		"pizzip": "^3.1.7"
